--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,13 @@
 @tailwind utilities;
 
 .card {
-  @apply bg-white rounded overflow-hidden shadow-md relative
+  @apply bg-white rounded overflow-hidden shadow-md relative cursor-pointer
 }
 
 .badge {
   @apply rounded-full text-secondary-200 bg-secondary-100 absolute top-0 p-2 mt-2 ml-2 text-xs uppercase font-bold
+}
+
+.btn {
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
 }
